# osir

./: Cargo.toml  x86_64-osir.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
