[package]
name = "osir"
version = "0.1.0"
edition = "2021"

#profile used for 'cargo build'
[profile.dev]
panic = "abort" #disable stack unwinding on panic

#profile used for 'cargo build --release'
[profile.release]
panic = "abort" #disable stack unwinding on panic

[dependencies]
bootloader = "0.9"